fix text alignment in front page

--- a/rockpack/mainsite/static/assets/front/front.less
+++ b/rockpack/mainsite/static/assets/front/front.less
@@ -1091,12 +1091,18 @@ footer {
 
       .text {
         display: block;
+        text-align: center;
       }
     }
 
     #addvideo {
       .plus {
         margin: 60px 0 0 45px;
+        text-align: center;
+
+        img {
+          margin: 0 auto 20px;
+        }
       }
     }
 
@@ -1105,7 +1111,7 @@ footer {
       .text {
         position: absolute;
         top: 525px;
-        text-align: left;
+        text-align: text;
         margin: 120px 20px 0 0;
         left: 38px;
       }
